// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Babelrc actions/reducer allows adding a new plugin 1`] = `
Object {
  "stages": Object {
    "build-html": Object {
      "options": Object {
        "babelrc": false,
        "cacheDirectory": true,
        "sourceType": "unambiguous",
      },
      "plugins": Array [
        Object {
          "name": "test-babel-plugin",
          "options": Object {},
        },
      ],
      "presets": Array [],
    },
    "build-javascript": Object {
      "options": Object {
        "babelrc": false,
        "cacheDirectory": true,
        "sourceType": "unambiguous",
      },
      "plugins": Array [
        Object {
          "name": "test-babel-plugin",
          "options": Object {},
        },
      ],
      "presets": Array [],
    },
    "develop": Object {
      "options": Object {
        "babelrc": false,
        "cacheDirectory": true,
        "sourceType": "unambiguous",
      },
      "plugins": Array [
        Object {
          "name": "test-babel-plugin",
          "options": Object {},
        },
      ],
      "presets": Array [],
    },
    "develop-html": Object {
      "options": Object {
        "babelrc": false,
        "cacheDirectory": true,
        "sourceType": "unambiguous",
      },
      "plugins": Array [
        Object {
          "name": "test-babel-plugin",
          "options": Object {},
        },
      ],
      "presets": Array [],
    },
  },
}
`;

exports[`Babelrc actions/reducer allows adding a new preset 1`] = `
Object {
  "stages": Object {
    "build-html": Object {
      "options": Object {
        "babelrc": false,
        "cacheDirectory": true,
        "sourceType": "unambiguous",
      },
      "plugins": Array [],
      "presets": Array [
        Object {
          "name": "test-babel-preset",
          "options": Object {},
        },
      ],
    },
    "build-javascript": Object {
      "options": Object {
        "babelrc": false,
        "cacheDirectory": true,
        "sourceType": "unambiguous",
      },
      "plugins": Array [],
      "presets": Array [
        Object {
          "name": "test-babel-preset",
          "options": Object {},
        },
      ],
    },
    "develop": Object {
      "options": Object {
        "babelrc": false,
        "cacheDirectory": true,
        "sourceType": "unambiguous",
      },
      "plugins": Array [],
      "presets": Array [
        Object {
          "name": "test-babel-preset",
          "options": Object {},
        },
      ],
    },
    "develop-html": Object {
      "options": Object {
        "babelrc": false,
        "cacheDirectory": true,
        "sourceType": "unambiguous",
      },
      "plugins": Array [],
      "presets": Array [
        Object {
          "name": "test-babel-preset",
          "options": Object {},
        },
      ],
    },
  },
}
`;

exports[`Babelrc actions/reducer allows merging config items 1`] = `
Array [
  Array [
    Array [
      "hi",
      Object {
        "wat": 2,
      },
    ],
    Object {
      "type": "plugin",
    },
  ],
]
`;

exports[`Babelrc actions/reducer allows merging config items 2`] = `
Array [
  Object {
    "file": Object {
      "resolved": "hi",
    },
    "options": Object {
      "wat": 1,
    },
  },
  Object {
    "file": Object {
      "resolved": "hi2",
    },
    "options": Object {
      "wat": 2,
    },
  },
]
`;

exports[`Babelrc actions/reducer sets default presets/plugins if there's no userland babelrc 1`] = `
Array [
  Array [
    Array [
      "/Users/kylemathews/programs/gatsby/packages/babel-plugin-remove-graphql-queries/index.js",
    ],
    Object {
      "type": "plugin",
    },
  ],
  Array [
    Array [
      "/Users/kylemathews/programs/gatsby/node_modules/@babel/preset-env/lib/index.js",
      Object {
        "loose": true,
        "modules": false,
        "targets": Object {
          "browsers": undefined,
        },
        "useBuiltIns": "usage",
      },
    ],
    Object {
      "type": "preset",
    },
  ],
  Array [
    Array [
      "/Users/kylemathews/programs/gatsby/node_modules/@babel/preset-react/lib/index.js",
      Object {
        "development": false,
        "pragma": "React.createElement",
        "useBuiltIns": true,
      },
    ],
    Object {
      "type": "preset",
    },
  ],
  Array [
    Array [
      "/Users/kylemathews/programs/gatsby/node_modules/@babel/preset-flow/lib/index.js",
    ],
    Object {
      "type": "preset",
    },
  ],
  Array [
    Array [
      "/Users/kylemathews/programs/gatsby/node_modules/@babel/plugin-proposal-class-properties/lib/index.js",
      Object {
        "loose": true,
      },
    ],
    Object {
      "type": "plugin",
    },
  ],
  Array [
    Array [
      "/Users/kylemathews/programs/gatsby/node_modules/babel-plugin-macros/dist/index.js",
    ],
    Object {
      "type": "plugin",
    },
  ],
  Array [
    Array [
      "/Users/kylemathews/programs/gatsby/node_modules/@babel/plugin-syntax-dynamic-import/lib/index.js",
    ],
    Object {
      "type": "plugin",
    },
  ],
  Array [
    Array [
      "/Users/kylemathews/programs/gatsby/node_modules/@babel/plugin-transform-runtime/lib/index.js",
      Object {
        "helpers": true,
        "polyfill": false,
        "regenerator": true,
      },
    ],
    Object {
      "type": "plugin",
    },
  ],
]
`;
